[package]
name = "firebase-database"
version = "0.1.0"

[dependencies]
reqwest = "0.8.5"
futures = { version = "0.1.19", default-features = false }
hyper = "0.10.2"
hyper-rustls = "0.6.1"
tokio-core = "0.1"
http = "0.1.5"
httparse = "1.0"
# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde.
serde = "1.0"

# Support for #[derive(Serialize, Deserialize)]. Required if you want Serde
# to work for structs and enums defined in your crate.
serde_derive = "1.0"

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"

pem = "0.4.1"

yup-oauth2 = "1.0.7"